# arrow-kafka

./: .gitignore  Cargo.toml  PUBLISH.md  README.md  README.zh-CN.md  arrow_kafka_pyo3.pyi  docker-compose.yml  et --hard v0.0.5-rc.1  pyproject.toml
.github/workflows/: CI.yml  build.yml  main.yml  release.yml
crates/arrow-kafka/: Cargo.toml
crates/arrow-kafka-pyo3/: Cargo.toml  LICENSE  README.md  arrow_kafka_pyo3.pyi  pyproject.toml
crates/arrow-kafka-pyo3/src/: lib.rs
crates/arrow-kafka/src/: admin.rs  converter.rs  error.rs  key.rs  lib.rs  schema_registry.rs  sink.rs  stats.rs
crates/arrow-kafka/tests/: phase1.rs  sink_basic.rs
docs/: index.md  schema_evolution.md  tuning.md
docs/en/: faq.md  getting-started.md  user-guide.md
docs/zh-CN/: api-reference.md  deployment.md  getting-started.md  user-guide.md
examples/: basic_usage.py  benchmark.py
tests/: conftest.py
tests/bench/: bench_arrow_kafka.py
tests/benchmark/: bench_arrow_kafka.py
tests/integration/: test_redpanda.py
