[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
arrow = { version = "58.0.0", features = ["ffi"] }
arrow-avro = { version = "58.0.0" }
apache-avro = { version = "0.21.0" }
rdkafka = { version = "0.39.0", default-features = false, features = ["cmake-build", "tokio","external-lz4","libz-static"] }
schema_registry_converter = { version = "4.8.0", features = ["avro", "blocking","rustls_tls"] }
anyhow = "1.0.102"
