[package]
name = "arrow-kafka-pyo3"
version = "0.2.0"
edition = "2024"

[lib]
name = "arrow_kafka_pyo3"
crate-type = ["cdylib"]

[features]
vendored-ssl = ["arrow-kafka/vendored-ssl"]

[dependencies]
pyo3 = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
arrow-kafka = { path = "../arrow-kafka" }
