[package]
name = "arrow-kafka"
version = "0.1.0"
edition = "2024"
description = "Rust-based high-performance Kafka sink with Arrow zero-copy support"
authors = ["NanoQuant Team"]
license = "MIT"

[lib]
name = "arrow_kafka"
crate-type = ["rlib"]

[features]
vendored-ssl = ["dep:openssl", "openssl/vendored", "rdkafka/ssl-vendored", "rdkafka/libz-static"]

[dependencies]
arrow = { workspace = true }
arrow-avro = { workspace = true }
apache-avro = { workspace = true }
rdkafka = { workspace = true }
schema_registry_converter = { workspace = true }
openssl = { version = "0.10", optional = true }
anyhow = { workspace = true }
